add songs to albums

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/yousef
 spring.datasource.username=yousef
-spring.datasource.password=yousef22
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=create
